@@ -1,3 +1,7 @@
+2004-03-13  Miguel de Icaza  <miguel@ximian.com>
+
+	* class.cs: Add check for duplicate operators.  Fixes 52477
+
 2004-03-11  Miguel de Icaza  <miguel@ximian.com>
 
 	* statement.cs (Switch.SimpleSwitchEmit): Deal with default labels
